--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   "devDependencies": {
     "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.4",
+    "@types/multer": "^1.4.9",
     "@types/node": "^16.11.10",
     "ts-node": "10.7.0",
     "typescript": "4.5.2"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
